Remove guice in preparation of java 17 support